tests/asm/error/header_double_names.s
.name "we

sd"

.comment "eyee"
.name "baba"

live	%1
